many changes, much better